--- a/src/app/pages/public/enter-number/enter-number.component.html
+++ b/src/app/pages/public/enter-number/enter-number.component.html
@@ -23,7 +23,8 @@
     </div>
     <div class="separator"></div>
     <div class="phone-input">
-        <input type="text" placeholder="(XXX-XXXX)" [(ngModel)]="phoneNumber"  class="phone-number-input">
+        <input type="text" placeholder="(XXX-XXXX)" [(ngModel)]="phoneNumber" (input)="validatePhoneNumber()" class="phone-number-input">
+        <div *ngIf="!validPhoneNumber" class="warning">¡El número de teléfono es inválido!</div>
     </div>
     <br>
     <div class="keyboard">
@@ -32,7 +33,7 @@
         }
         <button (click)="onBackspaceClick()">⌫</button>
         <button (click)="onDigitClick('0')">0</button>'
-        <button (click)="okey()"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M504 256c0 137-111 248-248 248S8 393 8 256 119 8 256 8s248 111 248 248zM227.3 387.3l184-184c6.2-6.2 6.2-16.4 0-22.6l-22.6-22.6c-6.2-6.2-16.4-6.2-22.6 0L216 308.1l-70.1-70.1c-6.2-6.2-16.4-6.2-22.6 0l-22.6 22.6c-6.2 6.2-6.2 16.4 0 22.6l104 104c6.2 6.2 16.4 6.2 22.6 0z"/></svg></button>
+        <button (click)="okey()" [disabled]="!validPhoneNumber"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M504 256c0 137-111 248-248 248S8 393 8 256 119 8 256 8s248 111 248 248zM227.3 387.3l184-184c6.2-6.2 6.2-16.4 0-22.6l-22.6-22.6c-6.2-6.2-16.4-6.2-22.6 0L216 308.1l-70.1-70.1c-6.2-6.2-16.4-6.2-22.6 0l-22.6 22.6c-6.2 6.2-6.2 16.4 0 22.6l104 104c6.2 6.2 16.4 6.2 22.6 0z"/></svg></button>
     </div>
-  </div>
+</div>
   
