--- a/src/app/pages/public/finally/finally.component.css
+++ b/src/app/pages/public/finally/finally.component.css
@@ -1,5 +1,3 @@
-
-
 .container {
     display: flex;
     flex-direction: column;
@@ -30,11 +28,12 @@
     justify-content: center; 
     gap: 10px; 
 }
-  
 
 .header h3 {
     margin: 0; 
 }
+
+
 
 .step-icons {
     display: flex;
@@ -53,36 +52,15 @@
     background-color: green;
 }
 
-.image-container {
-    margin-top: 20px;
-}
 .image-text-container {
     display: flex;
     align-items: center;
     margin-top: 20px;
+    text-align: center;
 }
-  
+
 .piggy-image {
     margin-right: 10px;
-}
-
-.phone-input {
-    margin-top: 20px;
-}
-
-.keyboard {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 200px;
-}
-
-.keyboard button {
-    flex: 1 0 25%;
-    margin: 5px;
-    padding: 10px;
-    font-size: 20px;
-    background-color: transparent; 
-    border: none; 
 }
 
 .separator {
@@ -91,16 +69,42 @@
     background-color: rgb(49, 245, 43);
     margin: 20px 0;
 }
-
-.phone-number-input {
-    width: 80%;
-    padding: 10px;
-    font-size: 24px; 
-    text-align: center;
-    border-radius: 5px; 
+h4 {
+    color: gray;
+    font-size: 15px;
 }
 
 h3 {
     
     font-size: 20px;
+}
+
+.Parrafo {
+    color: black;
+    font-size: 15px;
+}
+
+.button {
+    padding: 10px 80px;
+    border-radius: 20px;
+    background-color: rgb(8, 253, 8);
+    border: none;
+    cursor: pointer;
+    color: rgb(19, 82, 19);
+    font-size:20px;
+    transition: background-color 0.3s;
+}
+
+.button:hover {
+    background-color: #999;
+}
+
+.button-container {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.info {
+    margin-top: 20px;
 }
